[artf490322] Drupal7 eshop project-Alignment mismatch (Password field and Password strength checker)  - issue fixed

--- a/source/sites/all/themes/shop/style.css
+++ b/source/sites/all/themes/shop/style.css
@@ -753,7 +753,7 @@ width:320px;
 #user-login-form .form-item label {
     margin-left: 2px;
     padding: 0px;
-	float:left;
+	float:none;
     width: 75px;
 	text-align:left;
 	color:#CCCCCC;
@@ -978,4 +978,10 @@ border-color: #DE2A2A #DE2A2A #FFFFFF;
 /* To hide advanced search link */
 .search-advanced{
 display:none;
+}
+
+.password-strength{
+	float: right;
+    margin-top: 1.4em;
+    width: 15em;
 }
